--- a/TSLA Stock Data.ipynb
+++ b/TSLA Stock Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Adaptation of Yahoo Finance Stock Price Scraper by Debra Ray with lxml**"
+    "Adaptation of scraper tool: https://medium.com/c%C3%B3digo-ecuador/how-to-scrape-yahoo-price-history-data-with-python-52751eee9b"
    ]
   },
   {
@@ -20,6 +20,19 @@
     "import time\n",
     "import lxml\n",
     "from lxml import html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set-up\n",
+    "\n",
+    "*Datetime* objects can't be used in a URL, so **format_date** first takes a datetime object as an argument and then breaks it down to a *timetuple*. From there, we'll convert the tuple into a string of time in seconds passed since epoch.\n",
+    "\n",
+    "Using **subdomain**, I can search for any organization's stock price history as long as I have their stock ticker symbol. The start and end time parameters are provided by the prior.\n",
+    "\n",
+    "**header_function** provides the appropriate headers when accessing Yahoo's API. These pointers tell Yahoo exactly what page we are trying to access and prevents your machine from being blocked for requests."
    ]
   },
   {
@@ -58,6 +71,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping\n",
+    "\n",
+    "**scrape_page** implements the lxml module for scraping. Provided with the URL and headers, we'll first set up a request. Next, we'll convert the contents of the response to HTML format and navigate through the tags using XPath. For Yahoo Finance, our data of interest is found within a *table* tag as the first subelement. In **line 8**, we convert the contents into a string representation of an HTML table and finally read that into a *DataFrame* using *pandas*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -78,17 +100,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Requests Limit Bypass\n",
+    "\n",
+    "Yahoo restricts requests to 100 days of historical stock data, so I've designed a loop that will allow us to retrieve the complete set of Tesla stock prices since their IPO on June 29th, 2010."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stock Ticker\n",
     "symbol = 'TSLA'\n",
     "\n",
-    "dt_start = datetime.today() - timedelta(days = 100)\n",
-    "dt_end = datetime.today()\n",
-    "\n",
-    "\n",
+    "# Using the datetime module and today() method, I can retrieve the most up-to-date stock prices at any given time by\n",
+    "# running this script.\n",
+    "dt_start = datetime.today() - timedelta(days = 100) # We \"start\" scraping from 100 days ago from today.\n",
+    "dt_end = datetime.today() # We \"stop\" scraping once we reach today's data.\n",
+    " \n",
+    "# price_history is a list of DataFrames, each containing iterations of 100-days of data. \n",
     "price_history = []\n",
     "\n",
     "for _ in range(45):\n",
@@ -102,7 +136,7 @@
     "    url = base_url + sub\n",
     "    price_history += scrape_page(url, header)\n",
     "    dt_end = dt_start\n",
-    "    dt_start -= timedelta(days = 100)"
+    "    dt_start -= timedelta(days = 100) # This line resets our start and end dates shifting by 100-day windows.`"
    ]
   },
   {
@@ -143,65 +177,72 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Jun 26, 2020</td>\n",
-       "      <td>994.78</td>\n",
-       "      <td>995.00</td>\n",
-       "      <td>954.87</td>\n",
-       "      <td>959.74</td>\n",
-       "      <td>959.74</td>\n",
-       "      <td>7977448</td>\n",
+       "      <td>Sep 03, 2020</td>\n",
+       "      <td>407.23</td>\n",
+       "      <td>431.80</td>\n",
+       "      <td>402.00</td>\n",
+       "      <td>407.00</td>\n",
+       "      <td>407.00</td>\n",
+       "      <td>85937700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Jun 25, 2020</td>\n",
-       "      <td>954.27</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>937.15</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>9222200</td>\n",
+       "      <td>Sep 02, 2020</td>\n",
+       "      <td>478.99</td>\n",
+       "      <td>479.04</td>\n",
+       "      <td>405.12</td>\n",
+       "      <td>447.37</td>\n",
+       "      <td>447.37</td>\n",
+       "      <td>96176100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Jun 24, 2020</td>\n",
-       "      <td>994.11</td>\n",
-       "      <td>1000.88</td>\n",
-       "      <td>953.14</td>\n",
-       "      <td>960.85</td>\n",
-       "      <td>960.85</td>\n",
-       "      <td>10959600</td>\n",
+       "      <td>Sep 01, 2020</td>\n",
+       "      <td>502.14</td>\n",
+       "      <td>502.49</td>\n",
+       "      <td>470.51</td>\n",
+       "      <td>475.05</td>\n",
+       "      <td>475.05</td>\n",
+       "      <td>90119400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Jun 23, 2020</td>\n",
-       "      <td>998.88</td>\n",
-       "      <td>1012.00</td>\n",
-       "      <td>994.01</td>\n",
-       "      <td>1001.78</td>\n",
-       "      <td>1001.78</td>\n",
-       "      <td>6365300</td>\n",
+       "      <td>Aug 31, 2020</td>\n",
+       "      <td>444.61</td>\n",
+       "      <td>500.14</td>\n",
+       "      <td>440.11</td>\n",
+       "      <td>498.32</td>\n",
+       "      <td>498.32</td>\n",
+       "      <td>118374400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Jun 22, 2020</td>\n",
-       "      <td>999.95</td>\n",
-       "      <td>1008.88</td>\n",
-       "      <td>990.02</td>\n",
-       "      <td>994.32</td>\n",
-       "      <td>994.32</td>\n",
-       "      <td>6362400</td>\n",
+       "      <td>Aug 31, 2020</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date    Open     High     Low   Close* Adj Close**    Volume\n",
-       "0  Jun 26, 2020  994.78   995.00  954.87   959.74      959.74   7977448\n",
-       "1  Jun 25, 2020  954.27   985.98  937.15   985.98      985.98   9222200\n",
-       "2  Jun 24, 2020  994.11  1000.88  953.14   960.85      960.85  10959600\n",
-       "3  Jun 23, 2020  998.88  1012.00  994.01  1001.78     1001.78   6365300\n",
-       "4  Jun 22, 2020  999.95  1008.88  990.02   994.32      994.32   6362400"
+       "           Date             Open             High              Low  \\\n",
+       "0  Sep 03, 2020           407.23           431.80           402.00   \n",
+       "1  Sep 02, 2020           478.99           479.04           405.12   \n",
+       "2  Sep 01, 2020           502.14           502.49           470.51   \n",
+       "3  Aug 31, 2020           444.61           500.14           440.11   \n",
+       "4  Aug 31, 2020  5:1 Stock Split  5:1 Stock Split  5:1 Stock Split   \n",
+       "\n",
+       "            Close*      Adj Close**           Volume  \n",
+       "0           407.00           407.00         85937700  \n",
+       "1           447.37           447.37         96176100  \n",
+       "2           475.05           475.05         90119400  \n",
+       "3           498.32           498.32        118374400  \n",
+       "4  5:1 Stock Split  5:1 Stock Split  5:1 Stock Split  "
       ]
      },
      "execution_count": 5,
@@ -210,7 +251,16 @@
     }
    ],
    "source": [
-    "price_history[0].head()"
+    "price_history[0].head() # The first element of our list is the last 100 days from today's date."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final DataFrame\n",
+    "\n",
+    "In **line 1** below, I've created a new list of *DataFrames* that have the \"Date\" column set as the index. Finally, I concatenate the list of *DataFrames* to output the final version to be used in my analysis."
    ]
   },
   {
@@ -260,49 +310,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Jun 26, 2020</th>\n",
-       "      <td>994.78</td>\n",
-       "      <td>995.00</td>\n",
-       "      <td>954.87</td>\n",
-       "      <td>959.74</td>\n",
-       "      <td>959.74</td>\n",
-       "      <td>7977448</td>\n",
+       "      <th>Sep 03, 2020</th>\n",
+       "      <td>407.23</td>\n",
+       "      <td>431.80</td>\n",
+       "      <td>402.00</td>\n",
+       "      <td>407.00</td>\n",
+       "      <td>407.00</td>\n",
+       "      <td>85937700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Jun 25, 2020</th>\n",
-       "      <td>954.27</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>937.15</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>985.98</td>\n",
-       "      <td>9222200</td>\n",
+       "      <th>Sep 02, 2020</th>\n",
+       "      <td>478.99</td>\n",
+       "      <td>479.04</td>\n",
+       "      <td>405.12</td>\n",
+       "      <td>447.37</td>\n",
+       "      <td>447.37</td>\n",
+       "      <td>96176100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Jun 24, 2020</th>\n",
-       "      <td>994.11</td>\n",
-       "      <td>1000.88</td>\n",
-       "      <td>953.14</td>\n",
-       "      <td>960.85</td>\n",
-       "      <td>960.85</td>\n",
-       "      <td>10959600</td>\n",
+       "      <th>Sep 01, 2020</th>\n",
+       "      <td>502.14</td>\n",
+       "      <td>502.49</td>\n",
+       "      <td>470.51</td>\n",
+       "      <td>475.05</td>\n",
+       "      <td>475.05</td>\n",
+       "      <td>90119400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Jun 23, 2020</th>\n",
-       "      <td>998.88</td>\n",
-       "      <td>1012.00</td>\n",
-       "      <td>994.01</td>\n",
-       "      <td>1001.78</td>\n",
-       "      <td>1001.78</td>\n",
-       "      <td>6365300</td>\n",
+       "      <th>Aug 31, 2020</th>\n",
+       "      <td>444.61</td>\n",
+       "      <td>500.14</td>\n",
+       "      <td>440.11</td>\n",
+       "      <td>498.32</td>\n",
+       "      <td>498.32</td>\n",
+       "      <td>118374400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Jun 22, 2020</th>\n",
-       "      <td>999.95</td>\n",
-       "      <td>1008.88</td>\n",
-       "      <td>990.02</td>\n",
-       "      <td>994.32</td>\n",
-       "      <td>994.32</td>\n",
-       "      <td>6362400</td>\n",
+       "      <th>Aug 31, 2020</th>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
+       "      <td>5:1 Stock Split</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -315,70 +365,84 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jul 06, 2010</th>\n",
-       "      <td>20.00</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>15.83</td>\n",
-       "      <td>16.11</td>\n",
-       "      <td>16.11</td>\n",
-       "      <td>6866900</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>34334500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jul 02, 2010</th>\n",
-       "      <td>23.00</td>\n",
-       "      <td>23.10</td>\n",
-       "      <td>18.71</td>\n",
-       "      <td>19.20</td>\n",
-       "      <td>19.20</td>\n",
-       "      <td>5139800</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>4.62</td>\n",
+       "      <td>3.74</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>25699000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jul 01, 2010</th>\n",
-       "      <td>25.00</td>\n",
-       "      <td>25.92</td>\n",
-       "      <td>20.27</td>\n",
-       "      <td>21.96</td>\n",
-       "      <td>21.96</td>\n",
-       "      <td>8218800</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.18</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.39</td>\n",
+       "      <td>4.39</td>\n",
+       "      <td>41094000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jun 30, 2010</th>\n",
-       "      <td>25.79</td>\n",
-       "      <td>30.42</td>\n",
-       "      <td>23.30</td>\n",
-       "      <td>23.83</td>\n",
-       "      <td>23.83</td>\n",
-       "      <td>17187100</td>\n",
+       "      <td>5.16</td>\n",
+       "      <td>6.08</td>\n",
+       "      <td>4.66</td>\n",
+       "      <td>4.77</td>\n",
+       "      <td>4.77</td>\n",
+       "      <td>85935500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jun 29, 2010</th>\n",
-       "      <td>19.00</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>17.54</td>\n",
-       "      <td>23.89</td>\n",
-       "      <td>23.89</td>\n",
-       "      <td>18766300</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>93831500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2543 rows × 6 columns</p>\n",
+       "<p>2566 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Open     High     Low   Close* Adj Close**    Volume\n",
-       "Date                                                                \n",
-       "Jun 26, 2020  994.78   995.00  954.87   959.74      959.74   7977448\n",
-       "Jun 25, 2020  954.27   985.98  937.15   985.98      985.98   9222200\n",
-       "Jun 24, 2020  994.11  1000.88  953.14   960.85      960.85  10959600\n",
-       "Jun 23, 2020  998.88  1012.00  994.01  1001.78     1001.78   6365300\n",
-       "Jun 22, 2020  999.95  1008.88  990.02   994.32      994.32   6362400\n",
-       "...              ...      ...     ...      ...         ...       ...\n",
-       "Jul 06, 2010   20.00    20.00   15.83    16.11       16.11   6866900\n",
-       "Jul 02, 2010   23.00    23.10   18.71    19.20       19.20   5139800\n",
-       "Jul 01, 2010   25.00    25.92   20.27    21.96       21.96   8218800\n",
-       "Jun 30, 2010   25.79    30.42   23.30    23.83       23.83  17187100\n",
-       "Jun 29, 2010   19.00    25.00   17.54    23.89       23.89  18766300\n",
+       "                         Open             High              Low  \\\n",
+       "Date                                                              \n",
+       "Sep 03, 2020           407.23           431.80           402.00   \n",
+       "Sep 02, 2020           478.99           479.04           405.12   \n",
+       "Sep 01, 2020           502.14           502.49           470.51   \n",
+       "Aug 31, 2020           444.61           500.14           440.11   \n",
+       "Aug 31, 2020  5:1 Stock Split  5:1 Stock Split  5:1 Stock Split   \n",
+       "...                       ...              ...              ...   \n",
+       "Jul 06, 2010             4.00             4.00             3.17   \n",
+       "Jul 02, 2010             4.60             4.62             3.74   \n",
+       "Jul 01, 2010             5.00             5.18             4.05   \n",
+       "Jun 30, 2010             5.16             6.08             4.66   \n",
+       "Jun 29, 2010             3.80             5.00             3.51   \n",
        "\n",
-       "[2543 rows x 6 columns]"
+       "                       Close*      Adj Close**           Volume  \n",
+       "Date                                                             \n",
+       "Sep 03, 2020           407.00           407.00         85937700  \n",
+       "Sep 02, 2020           447.37           447.37         96176100  \n",
+       "Sep 01, 2020           475.05           475.05         90119400  \n",
+       "Aug 31, 2020           498.32           498.32        118374400  \n",
+       "Aug 31, 2020  5:1 Stock Split  5:1 Stock Split  5:1 Stock Split  \n",
+       "...                       ...              ...              ...  \n",
+       "Jul 06, 2010             3.22             3.22         34334500  \n",
+       "Jul 02, 2010             3.84             3.84         25699000  \n",
+       "Jul 01, 2010             4.39             4.39         41094000  \n",
+       "Jun 30, 2010             4.77             4.77         85935500  \n",
+       "Jun 29, 2010             4.78             4.78         93831500  \n",
+       "\n",
+       "[2566 rows x 6 columns]"
       ]
      },
      "execution_count": 6,
@@ -398,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('TSLA.csv', index = True)"
+    "df.to_csv('TSLA.csv', index = True) # Save to csv for record-keeping and importing."
    ]
   }
  ],
